# isaac-save-installer

./: .cspell.json  .gitignore  .golangci.yml  Cargo.toml  README.md  build.sh  cspell.json  go.mod  isaac_version.go  lint.sh  main.go  misc.go  run.sh  save_file.go  save_file_afterbirth.go  save_file_afterbirth_plus.go  save_file_afterbirth_plus_bp5.go  save_file_rebirth.go  save_file_repentance.go
.github/workflows/: ci.yml
saves/Afterbirth+/: README.txt
saves/Repentance/: README.txt
src/: backup.rs  change_steam_cloud.rs  constants.rs  delete.rs  enums.rs  get_input.rs  install.rs  isaac_save_installer.rs  main.rs  save_data_path.rs  save_file_afterbirth.rs  save_file_afterbirth_plus.rs  save_file_afterbirth_plus_bp5.rs  save_file_rebirth.rs  save_file_repentance.rs  save_files.rs  utils.rs
srdc/: README.txt
