[package]
name = "isaac-save-installer"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
base64 = "0.13.0"
dirs-next = "2.0.0"
dont_disappear = "3.0.1"
rust-ini = "0.18.0"
strum = "0.24"
strum_macros = "0.24"
sysinfo = "0.23.5"
text_io = "0.1.10"
whoami = "1.2.1"
winreg = "0.10.1"
