[package]
name = "isaac-save-installer"
version = "1.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
colored = "2.0.4"
dirs-next = "2.0.0"
dont_disappear = "3.0.1"
rust-ini = "0.19.0"
strum = "0.25.0"
strum_macros = "0.25.2"
sysinfo = "0.29.8"
text_io = "0.1.12"
whoami = "1.4.1"
winreg = "0.51.0"
